# claude-sdlc-pipeline

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.bmpipe/: config.yaml
.bsdlc/: config.yaml
.claude/skills/: test-orchestrator
.csdlc/: config.yaml
.github/workflows/: ci.yml
_bmad-output/implementation-artifacts/: deferred-work.md  epic-1-context.md  epic-b-context.md  spec-1-scaffold.md  spec-2-config-system.md  spec-3-cli.md  spec-4-orchestrator-extraction.md  spec-5-plugin-system.md  spec-6-sanitize.md  spec-7-docs.md  spec-a1-stop-after.md  spec-a2-structured-review-findings.md  spec-a3-classification-prompt.md  spec-a4-safety-heuristic-orchestrator-wiring.md  spec-b1-skill-rewrite.md  spec-b2-dependency-graph.md  (+9 more)
docs/: architecture-automation-system.drawio  architecture-automation-system.md  design-agent-teams-orchestrator.md  design-subagent-orchestrator.md  epic-a-classification-and-bmpipe-enhancements.md  epic-b-subagent-track-orchestrator.md  issue-review-classification-gaps.md  issue-review-gaps-from-story-1-3.md  issue-review-gaps-from-story-1-8.md  issue-workflow-name-alignment.md  learnings-epic-1-retro.md  party-mode-2026-04-23-subagent-vs-agent-teams-orchestrator-review.md  story-B9-live-test-bmad-sdlc.md  test-orchestrator-architecture.md  test-orchestrator-results-2026-04-23.md
templates/: config.yaml.j2
tests/: conftest.py  test_cli.py  test_config.py  test_contracts.py  test_integration.py  test_orchestrator.py  test_plugins.py  test_prompts.py  test_resume.py  test_run_log.py  test_runner.py  test_transitions.py
(+70 files in other folders)
